--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
 <head>
 	<title>Quanto você teria de Bitcoin hoje?</title>
 
+	<link rel="stylesheet" type="text/css" href="./styles.css">
 	<script src="https://kit.fontawesome.com/199b72f6ff.js" crossorigin="anonymous"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
 	<header>
 		<nav>
 			<ul>
-				<li>Billionaires Checks</li>
-				<li>Sobre nós</li>
-				<li>Billionaires Br</li>
+				<li> <a href="billionaires-checks.html">Billionaires Checks</a></li>
+				<li> <a href="index.html">Ínicio</a></li>
+				<li> <a href="https://billionaires-beta.vercel.app/">Billionaires Br </a></li>
 			</ul>
+			
 		</nav>
 	</header>
 	<main>
-		<h1>Quanto você teria de Bitcoin hoje?</h1>
+		
+
+		<h1>Quanto você teria de <span>Bitcoin </span>se tivesse investido 5 anos átras?</h1>
 		<section>
 			<div class="section-left">
                 <input type="number" class="amount-first" value="1">
@@ -29,8 +34,11 @@
 
 		<button onclick="calc()" class="swap">
                 <i class="fas fa-exchange-alt"></i>
-            </button>
+        </button>
+
+		<h3>Atualmente você teria...</h3>
 		<p class="rate-info"></p>
+
 	</main>
 
 	<footer>
@@ -59,11 +67,15 @@
 				.then(data => {
 
 					let btc = data.ask;
-					vezes = btc / 3614.00;
+					vezes = btc / 577;
 					console.log(vezes);
+
+
 					let resultado = amountFirst.value  * vezes;
-					rateInfo.textContent = resultado;
-					console.log(resultado)
+
+					var intvalue = Math.round( resultado );
+
+					rateInfo.textContent = "U$D " + intvalue + ",00";
 
 				})
 
