--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Quanto você teria de Bitcoin hoje?</title>
+	<title>Bitcoin para dólar</title>
 
 	<link rel="stylesheet" type="text/css" href="./styles.css">
 	<script src="https://kit.fontawesome.com/199b72f6ff.js" crossorigin="anonymous"></script>
@@ -21,7 +21,7 @@
 	<main>
 		
 
-		<h1>Quanto você teria de <span>Bitcoin </span>se tivesse investido 5 anos átras?</h1>
+		<h1>Quanto você teria em <span>Dólares </span>se tivesse investido em <span>Bitcoin</span> 5 anos átras?</h1>
 		<section>
 			<div class="section-left">
                 <input type="number" class="amount-first" value="1">
